I've been forgetting what I've changed :P

New in 2.04:
     The worktodo line parser is now apositional, recognizing certain characters
     as only belonging to certain fields. 
     
     Additionally, you can now specify FFT length for a given exponent with 
     (for example) "Test=N/A,expo,1444K". The FFT field must contain a K or M, 
     which are interpreted the obvious way.
     
     There is slightly more error checking on the command line options with an
     argument (and for some reason, the "-s" option will no longer accept a 
     folder name starting with "-" :-) ).
     
     The -f option will also recognize and accept lengths such as "1444K" or
     "3M", like the worktodo. However, you can specify a length the old way 
     without the K, unlike on the worktodo line.
     
     All FFT lengths printed are now in "1444K" format.
     
     Total time for a test is now measured and printed when the test is
     complete. This time will be carried over between restarts in the save file,
     however the program will recognize an old savefile without total time and
     proceed accordingly. (Should it be printed to the results file?)
     
     The "err = " prints the maximum error since the last checkpoint, as opposed
     to the maximum error since the last restart.